--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "remixicon": "^4.3.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
