--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "remixicon": "^4.3.0",
+    "socket.io-client": "^4.7.5",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
