--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "pinia": "^2.2.1",
     "remixicon": "^4.3.0",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.29",
